--- a/css/blog.css
+++ b/css/blog.css
@@ -1,5 +1,7 @@
 /* stylelint-disable stylistic/selector-list-comma-newline-after */
-
+html {
+  scroll-padding-top: 60px; /* Adjust based on the height of your fixed header or navbar */
+}
 .blog-header-logo {
   font-family: "Playfair Display", Georgia, "Times New Roman", serif/*rtl:Amiri, Georgia, "Times New Roman", serif*/;
   font-size: 2.25rem;
@@ -37,3 +39,4 @@ h1, h2, h3, h4, h5, h6 {
   margin-bottom: 1.25rem;
   color: #727272;
 }
+
