--- a/css/style.css
+++ b/css/style.css
@@ -74,3 +74,7 @@
 .bd-mode-toggle .dropdown-menu .active .bi {
     display: block !important;
 }
+
+body {
+    scroll-padding-top: 60px; /* Adjust based on the height of your fixed header or navbar */
+}
